2001-08-13  Frank Warmerdam  <warmerdam@pobox.com>

	* ogr/ogrspatialreference.cpp: improved IsSame() test.

2001-07-18  Frank Warmerdam  <warmerdam@pobox.com>

	* aclocal.m4: modified to identify -all for IRIX. 

2001-07-17  Frank Warmerdam  <warmerdam@pobox.com>

	* png: ensure we have png.h before accepting system png.  Moved 
	internal libpng code into a subdirectory to avoid include file
	confusion.

	* configure: added support for detecting PostgreSQL.  

	* GDALmake.opt, app/GNUmakefile: Added support for building on 
	platforms without shared library support (ie. Cygwin).

2001-07-12  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/raw/pauxdataset.cpp: Added limited support for reading gcps
	and projections.

2001-07-09  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/sdts/sdtsdataset.cpp: upgraded to use WKT for projections.

2001-06-28  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/geotiff/geotiff.cpp: Fixed bug with RGBA image access on
	big endian systems.

2001-06-22  Frank Warmerdam  <warmerdam@pobox.com>

	* core/gdaldefaultoverviews.c: fixed several more problems with
	refreshing existing overviews.

	* core/gdalrasterblock.cpp: added support for GDAL_CACHEMAX
	environment variable.

	* core/gdaladefaultoverviews.c: Fixed crash with refreshing overviews
	during build.

2001-06-21  Frank Warmerdam  <warmerdam@pobox.com>

	* Added core/gdal_drivertut.dox, documentation on writing drivers.

2001-06-20  Frank Warmerdam  <warmerdam@pobox.com>

	* apps/GNUmakefile: fixed some bugs in generating apps/gdal-config
	thanks to Phillip Dibner.

	* core/gdal_priv.h,gdaldefaultoverviews.cpp: GDALDefaultOverviews now
	allows setting exact name of .ovr file, and remembers name to use
	when building overviews.

	* frmts/raw/hkvdataset.cpp: reimplement overviews in TIFF file.

	* ogr/ogrsf_frmts/pg: Implement PostGIS support.

2001-06-01  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/jpg/jpgdataset.cpp: altered magic number testing to work