@@ -1,3 +1,8 @@
+2001-08-15  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* core/gdal_misc.cpp: Return magnitude values for samples from
+	complex valued bands.
+
 2001-08-13  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* ogr/ogrspatialreference.cpp: improved IsSame() test.
